# biogl

./: .gitignore  CHANGELOG.md  GXFPARSE_CHANGES.md  GxfParse.py  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_3.0.0.md  __init__.py  arg_info_header.py  coord_overlap.py  fasta_parse.py  flex_open.py  label_info.py  pyproject.toml  random_seq.py  recursive_items.py  rev_comp.py  test_backwards_compatibility.py  translate.py
.github/workflows/: tests.yml
biogl/: GxfParse.py  __init__.py  byte_convert.py  fasta_parse.py  file_hash.py  flex_open.py  get_runtime.py  is_fasta.py  label_info.py  random_seq.py  rev_comp.py  window.py
tests/: test_fasta_parse.py  test_gxfparse.py  test_rev_comp.py
