[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biogl"
version = "2.4.0"
description = "A collection of (semi) useful bioinformatics functions"
authors = [
  { name = "Graham Larue", email = "egrahamlarue@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "smart_open",
]

requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]